<resources>
    <string name="app_name">Coursr</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Главная</string>
    <string name="favorites">Избранное</string>
    <string name="account">Аккаунт</string>
    <string name="search_courses_text">Search courses...</string>
    <string name="more_details">Подробнее</string>
    <string name="price_rubles">%1$s ₽</string>
    <string name="by_publish_date">По дате добавления</string>
    <string name="enter">Вход</string>
    <string name="email">Email</string>
    <string name="email_example">example@gmail.com</string>
    <string name="password">Пароль</string>
    <string name="enter_password">Введите пароль</string>
    <string name="do_you_have_no_account">Нету аккаунта?</string>
    <string name="sign_up">Регитрация</string>
    <string name="forgot_password">Забыл пароль</string>
    <string name="email_is_incorrect">Некорректный email</string>
    <string name="password_is_over_six">Пароль должен содержать не менее 6 символов</string>
    <string name="email_is_too_short">Email слишком короткий</string>
    <string name="logout">Выход</string>
    <string name="user_email">Вы вошли с помощью email:\n%1$s</string>
</resources>