<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.ui.LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black">

        <TextView
            android:id="@+id/tvTitleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="140dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/roboto"
            android:gravity="start"
            android:text="@string/enter"
            android:textColor="@color/white_icons"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvTitleEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/email"
            android:textColor="@color/white_icons"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@id/tvTitleLogin"
            app:layout_constraintStart_toStartOf="@id/tvTitleLogin"
            app:layout_constraintTop_toBottomOf="@id/tvTitleLogin" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/input_layout_color"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="@id/tvTitleLogin"
            app:layout_constraintStart_toStartOf="@id/tvTitleLogin"
            app:layout_constraintTop_toBottomOf="@id/tvTitleEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEnterEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_example"
                android:inputType="text|textEmailAddress"
                android:textColorHint="@color/white_icons" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvTitlePassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_medium"
            android:gravity="start"
            android:text="@string/password"
            android:textColor="@color/white_icons"
            app:layout_constraintEnd_toEndOf="@id/tvTitleLogin"
            app:layout_constraintStart_toStartOf="@id/tvTitleLogin"
            app:layout_constraintTop_toBottomOf="@id/inputTextName" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputTextPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:boxBackgroundColor="@color/input_layout_color"
            app:boxCornerRadiusBottomEnd="30dp"
            app:boxCornerRadiusBottomStart="30dp"
            app:boxCornerRadiusTopEnd="30dp"
            app:boxCornerRadiusTopStart="30dp"
            app:boxStrokeWidth="0dp"
            app:layout_constraintEnd_toEndOf="@id/tvTitleLogin"
            app:layout_constraintStart_toStartOf="@id/tvTitleLogin"
            app:layout_constraintTop_toBottomOf="@id/tvTitlePassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEnterPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/enter"
            app:backgroundTint="@color/green"
            app:layout_constraintEnd_toEndOf="@id/tvTitleLogin"
            app:layout_constraintStart_toStartOf="@id/tvTitleLogin"
            app:layout_constraintTop_toBottomOf="@id/inputTextPassword" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutAccText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btLogin">

            <TextView
                android:id="@+id/tvNoAcc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_condensed_bold"
                android:letterSpacing="0.04"
                android:text="@string/do_you_have_no_account"
                android:textColor="@color/white_icons"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvReg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:letterSpacing="0.04"
                android:text="@string/sign_up"
                android:textColor="@color/green"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/tvNoAcc"
                app:layout_constraintTop_toTopOf="@id/tvNoAcc" />

            <TextView
                android:id="@+id/tvForgottenPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/roboto_condensed_bold"
                android:gravity="center"
                android:letterSpacing="0.04"
                android:text="@string/forgot_password"
                android:textColor="@color/green"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNoAcc" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layoutSpacer"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="32dp"
            android:background="@color/stroke"
            app:layout_constraintEnd_toEndOf="@id/tvTitleLogin"
            app:layout_constraintStart_toStartOf="@id/tvTitleLogin"
            app:layout_constraintTop_toBottomOf="@id/layoutAccText">

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/layoutLinks"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/tvTitleLogin"
            app:layout_constraintStart_toStartOf="@id/tvTitleLogin"
            app:layout_constraintTop_toBottomOf="@id/layoutSpacer">

            <ImageButton
                android:id="@+id/btVK"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_vk_button"
                android:backgroundTint="@color/vk_color"
                android:src="@drawable/vk_logo" />

            <ImageButton
                android:id="@+id/btOK"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/bg_ok_button"
                android:src="@drawable/ok_logo" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>